recursion.cons.concat.Concat.scala.error
Erreur de compilation :
Concat:4: error: not found: value l
  else return l.head::concat(l1.tail, l2)
              ^