recursion.cons.concat.Concat.scala.code
def concat(l1:List[Int], l2:List[Int]): List[Int] = {
  if(l1.tail==Nil)return l1.head::l2
  else return l.head::concat(l1.tail, l2)
}